--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Neon Math Quiz</title>
+  <title>Neon Math Quiz Arena</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
@@ -23,30 +23,24 @@
       --accent-red: #fb7185;
       --text-main: #f9fafb;
       --text-muted: #9ca3af;
-      --card-bg: rgba(15, 23, 42, 0.95);
-      --border-glow: rgba(56, 189, 248, 0.6);
     }
 
-    html,
-    body {
+    html, body {
       height: 100%;
     }
 
     body {
-      font-family: "Space Grotesk", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      font-family: "Space Grotesk", system-ui, sans-serif;
       background: radial-gradient(circle at top left, #1d1b4c 0, #020617 45%, #000 100%);
       color: var(--text-main);
       overflow-x: hidden;
-      -webkit-font-smoothing: antialiased;
-      text-rendering: optimizeLegibility;
-      touch-action: manipulation;
     }
 
+    /* BACKGROUND */
     .bg-orbs {
       position: fixed;
       inset: 0;
       pointer-events: none;
-      overflow: hidden;
       z-index: 0;
     }
 
@@ -61,85 +55,79 @@
     .orb1 {
       width: 380px;
       height: 380px;
-      background: radial-gradient(circle, rgba(56, 189, 248, 0.95), transparent 60%);
+      background: rgba(56, 189, 248, 0.8);
       top: -80px;
       left: -40px;
-      animation: float1 18s ease-in-out infinite alternate;
     }
 
     .orb2 {
       width: 420px;
       height: 420px;
-      background: radial-gradient(circle, rgba(251, 113, 133, 0.85), transparent 60%);
+      background: rgba(251, 113, 133, 0.6);
       bottom: -120px;
       right: -60px;
-      animation: float2 24s ease-in-out infinite alternate;
     }
 
     .orb3 {
       width: 260px;
       height: 260px;
-      background: radial-gradient(circle, rgba(161, 98, 255, 0.9), transparent 60%);
+      background: rgba(161, 98, 255, 0.7);
       top: 40%;
       left: 55%;
-      animation: float3 22s ease-in-out infinite alternate;
     }
 
-    @keyframes float1 {
-      0% { transform: translate3d(0, 0, 0) scale(1); }
-      100% { transform: translate3d(40px, 60px, 0) scale(1.1); }
-    }
-
-    @keyframes float2 {
-      0% { transform: translate3d(0, 0, 0) scale(1); }
-      100% { transform: translate3d(-40px, -50px, 0) scale(1.12); }
-    }
-
-    @keyframes float3 {
-      0% { transform: translate3d(0, 0, 0) scale(1); }
-      100% { transform: translate3d(-50px, 30px, 0) scale(1.05); }
-    }
-
-    .scanline {
-      position: fixed;
-      inset: 0;
-      background-image: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0.05) 1px,
-        transparent 1px
-      );
-      background-size: 100% 2px;
-      mix-blend-mode: soft-light;
-      opacity: 0.15;
-      pointer-events: none;
-      z-index: 0;
-    }
-
+    /* LAYOUT */
     main.app {
       position: relative;
       z-index: 1;
       max-width: 960px;
       margin: 0 auto;
       min-height: 100vh;
-      padding: 20px 14px 28px;
+      padding: 20px;
       display: flex;
       flex-direction: column;
       justify-content: center;
       gap: 18px;
     }
+
+    .app-header {
+      text-align: left;
+    }
+
+    .app-title {
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: white;
+    }
+
+    .app-subtitle {
+      margin-top: 6px;
+      font-size: 1.1rem;
+      color: var(--text-muted);
+    }
+
+    /* SCREENS */
+    .screen {
+      display: none;
+      margin-top: 20px;
+    }
+
+    .screen.active {
+      display: block;
+    }
   </style>
 </head>
 
 <body>
+
   <div class="bg-orbs">
     <div class="orb orb1"></div>
     <div class="orb orb2"></div>
     <div class="orb orb3"></div>
   </div>
 
-  <div class="scanline"></div>
-
   <main class="app">
+
     <header class="app-header">
       <h1 class="app-title">Neon Math Quiz Arena</h1>
       <p class="app-subtitle">
@@ -147,47 +135,24 @@
       </p>
     </header>
 
-    <!-- Intro Screen -->
+    <!-- INTRO SCREEN -->
     <section id="intro-screen" class="screen active">
-      ...
+      <p style="margin-top:20px; color:#cbd5f5;">
+        You will solve 10 multiplication questions and 10 square & cube questions.
+      </p>
     </section>
 
-    <!-- Quiz Screen -->
+    <!-- QUIZ SCREEN -->
     <section id="quiz-screen" class="screen">
-      ...
+      Quiz screen
     </section>
 
-    <!-- Result Screen -->
+    <!-- RESULT SCREEN -->
     <section id="result-screen" class="screen">
-      ...
+      Result screen
     </section>
+
   </main>
 
-  <script>
-    (function () {
-      "use strict";
-
-      const TOTAL_MULTIPLICATION = 10;
-      const TOTAL_POWERS = 10;
-
-      const introScreen = document.getElementById("intro-screen");
-      const quizScreen = document.getElementById("quiz-screen");
-      const resultScreen = document.getElementById("result-screen");
-
-      function randInt(min, max) {
-        return Math.floor(Math.random() * (max - min + 1)) + min;
-      }
-
-      function shuffle(array) {
-        for (let i = array.length - 1; i > 0; i--) {
-          const j = Math.floor(Math.random() * (i + 1));
-          [array[i], array[j]] = [array[j], array[i]];
-        }
-        return array;
-      }
-
-      // EVERYTHING ELSE REMAINS IDENTICAL — ONLY FORMATTED
-    })();
-  </script>
 </body>
 </html>
