--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       Quiz screen (hidden until start)
     </section>
 
-    <!-- RESULT SCREEN -->
+    <!-- RESULasdasdadsadT SCREEN -->
     <section id="result-screen" class="screen">
       Result screen
     </section>
